# murakumo-studio

./: .gitignore  README.md  bb.edn  deps.edn  nbb.edn  package-lock.json  package.json  shadow-cljs.edn
.clj-kondo/: config.edn
.clj-kondo/.cache/v1/clj/: murakumo-studio.engine.transit.json  murakumo-studio.fleet.transit.json  murakumo-studio.models-test.transit.json  murakumo-studio.models.transit.json
.clj-kondo/.cache/v1/cljs/: murakumo-studio.client.transit.json  murakumo-studio.desktop.transit.json  murakumo-studio.state.transit.json  murakumo-studio.tauri.transit.json  murakumo-studio.ui.transit.json
.github/workflows/: ci.yml
scripts/: gen_kotoba_ui_css.clj  tasks-complex.edn  tasks.edn
src/murakumo_studio/: client.cljs  desktop.cljs  engine.clj  fleet.clj  models.clj  state.cljs  tauri.cljs  ui.cljs
tauri/: .gitignore  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/.cargo/: config.toml
tauri/src-tauri/src/: main.rs
test/murakumo_studio/: models_test.clj
