[package]
name = "murakumo-studio"
version = "0.1.0"
description = "murakumo-studio — local inference desktop app (kotoba-lang/inference based)"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
